===============================================================
2006-06-06 Released 0.87.3 at revision 2432

2006-05-30 More partial support for polygons with outline or fill,
           but not both.  Made LineCollection inherit from
           ScalarMappable. - EF

2006-05-29 Yet another revision of aspect-ratio handling. - EF

2006-05-27 Committed a patch to prevent stroking zero-width lines in
           the svg backend - DSD

2006-05-24 Fixed colorbar positioning bug identified by Helge
           Avlesen, and improved the algorithm; added a 'pad'
           kwarg to control the spacing between colorbar and
           parent axes. - EF

2006-05-23 Changed color handling so that collection initializers
           can take any mpl color arg or sequence of args; deprecated
           float as grayscale, replaced by string representation of
           float. - EF

2006-05-19 Fixed bug: plot failed if all points were masked - EF

2006-05-19 Added custom symbol option to scatter - JDH

2006-05-18 New example, multi_image.py; colorbar fixed to show
           offset text when the ScalarFormatter is used; FixedFormatter
           augmented to accept and display offset text. - EF

2006-05-14 New colorbar; old one is renamed to colorbar_classic.
           New colorbar code is in colorbar.py, with wrappers in
           figure.py and pylab.py.
           Fixed aspect-handling bug reported by Michael Mossey.
           Made backend_bases.draw_quad_mesh() run.- EF

2006-05-08 Changed handling of end ranges in contourf: replaced
           "clip-ends" kwarg with "extend".  See docstring for
           details. -EF

2006-05-08 Added axisbelow to rc - JDH

2006-05-08 If using PyGTK require version 2.2+ - SC

2006-04-19 Added compression support to PDF backend, controlled by
           new pdf.compression rc setting. - JKS

2006-04-19 Added Jouni's PDF backend

2006-04-18 Fixed a bug that caused agg to not render long lines
